# ContextROS

./: .gitignore  README.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/clean_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/croscpp/: CMakeLists.txt  README.md  package.xml
catkinws/: README.md  README.md~
catkinws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkinws/src/: CMakeLists.txt
catkinws/src/crospy/: CMakeLists.txt  package.xml  setup.py
catkinws/src/simple/: CMakeLists.txt  (+2 more)
code/: cal_server.cpp  cal_server.h  calculate_server2.cpp  calculate_server2.cr  hoge.cpp  hoge.h  layer.cpp  layer.cr  layer.h  parser.py  sample.cpp  sample2.py  strcmp  strcmp.cpp  strcmp.h
code/SampleProgram/: cal_server.cpp  layer.cpp  layer.h  layer_controler2.cpp  wr_server.cpp
code/evaluate/: cal_server.cpp  layer.cr  layer_controler2.cpp  sample_context.cpp
saeki_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
saeki_ws/src/clean_simulation/: CMakeLists.txt  package.xml
saeki_ws/src/clean_simulation/launch/: turtlebot3_house.launch  turtlebot3_world.launch
saeki_ws/src/clean_simulation/scripts/: clean.py  clean_robo.py  spawn_trashes.py
saeki_ws/src/clean_simulation/src/: turtlebot3_drive.cpp
saeki_ws/src/clean_simulation/srv/: SpawnTrash.srv
saeki_ws/src/clean_simulation/urdf/: simple_object.urdf.xacro  turtlebot3_waffle.urdf.xacro
thesis-template/: .gitignore  J.tex  Makefile  README.md  ack.tex  bt_saeki.out  bt_saeki.tex  conclu.tex  conclu_template.tex  element_technology.tex  evaluation.tex  intro.tex  jgraduate.sty  proposed_method.tex  public.tex  related_work.tex  resume.sty  resume.tex  sieicej.bst  thesis.out  thesis.tex
thesis-template/bib/: IEEEabrv.bib  my.bib  mystr_IEEEfull.bib  mystr_IEICE.bib  pub.bib
thesis-template/img/: test.eps
ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ws/src/: CMakeLists.txt
(+168 files in other folders)
